2007-09-15  Ales Hakl  <ales at hakl dot net>

	* src/control.c (native_form_let): use argument parsing macros
	removed MIN_ARGS() and NEED_ARGS() macros

	* dfsch/dfsch.h (DFSCH_ARG_REST): macro for getting rest of
	arguments

	* src/control.c (native_form_quote): use argument parsing macros

2007-09-03  Ales Hakl  <ales at hakl dot net>

	* src/ports.c (dfsch_port_readline): line reading function

2007-08-31  Ales Hakl  <ales at hakl dot net>

	* dfsch/ports.h: Port type definition.
	Documentation comments

2007-08-26  Ales Hakl  <ales at hakl dot net>

	* src/object.c (dfsch__object_native_register): define
	class-superclass in top-level environment

2007-08-22  Ales Hakl  <ales at hakl dot net>

	* src/hash.c (alloc_vector): vector was allocated too large.

	* lib/unix.c (stat_t): stat(2) and struct stat wrappers
	(native_lstat): lstat(2) and fstat(2)

2007-08-21  Ales Hakl  <ales at hakl dot net>

	* src/util.c (dfsch__vsaprintf): sprintf() that allocates output
	buffer

	* src/parse.c (tokenizer_process): ignore shebang

	* lib/unix.c (native_gettimeofday): gettimeofday(2)

	* src/promise.c (dfsch_force_promise): more MT-safe promises

2007-08-18  Ales Hakl  <ales at hakl dot net>

	* lib/unix.c (dir_type): support for directory streams

2007-08-17  Ales Hakl  <ales at hakl dot net>

	* dfsch/lib/regex.h: Documentation comments

2007-08-13  Ales Hakl  <ales at hakl dot net>

	* lib/load.c (dfsch_load): fixed path searching logic.

2007-08-12  Ales Hakl  <ales at hakl dot net>

	* lib/load.c: provide/require mechanism

2007-08-08  Ales Hakl  <ales at hakl dot net>

	* src/object.c: unified exceptions to not-a-class-instance

2007-08-01  Ales Hakl  <ales at hakl dot net>

	* src/parse.c (dispatch_string): ignore escaped newlines

2007-07-29  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_zip): zip function (transposition of nested lists)

	* src/format.c: simple future-proof format implementation,
	currently supporting ~a, ~s and ~*
